crates/dbdict/tests/snapshots/validate_meta__unreadable_source_reported.snap
---
source: crates/dbdict/tests/validate_meta.rs
assertion_line: 257
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-wspace/dbdict
tables:
  - name: animals
    source:
      parquet: missing.parquet
    columns:
      - name: name
        type: string
        examples: [otter, seal]
────────────────────────────────────────
error: [M05] A table's `source` must point at a readable Parquet file.
 --> dict.yaml:6:16
  |
4 |   - name: animals
5 |     source:
6 |       parquet: missing.parquet
  |                ^^^^^^^^^^^^^^^ Parquet error: Cannot open file: No such file or directory (os error 2)
